--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,10 @@ buildscript {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
+    }
+}
