--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
 
 android {
     compileSdk 30
+    buildToolsVersion "30.0.2"
     defaultConfig {
         applicationId "com.mindera.rocketscience"
         minSdk 21
