sdk version changes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ android {
     buildFeatures{
         dataBinding true
     }
+    afterEvaluate {
+        assembleRelease.dependsOn testReleaseUnitTest, connectedAndroidTest
+    }
 }
 
 dependencies {
